# sysbot-helper-bot

./: .flake8  .gitignore  LICENSE  README.md  config.example.yml  main.py  pyproject.toml  requirements.txt  stats.example.yml  stats.py
cogs/: __init__.py  admin.py  announcement.py  autoreact.py  commands.py  dm.py  embeds.py  emoji.py  floating_help.py  ip.py  luck.py  pa8.py  parser.py  sysbot.py  telegram.py  text.py  time.py  variables.py
cogs/checks/: __init__.py
cogs/helpers/: __init__.py
cogs/utils/: __init__.py  discord_action.py  wait_tasks.py
cogs_extra/: test_presence.py
res/: spam.yml
src/cogs/: __init__.py  admin.py  api_server.py  commands.py  dm.py  floating_help.py  help_doc.py  hex.py  leetcode.py  level.py  luck.py  pa8.py  stats.py  telegram.py  variables.py
src/cogs/checks/: __init__.py
src/cogs/models/: __init__.py  experience.py
src/cogs/utils/: parser.py
src/sysbot_helper/: __init__.py  aiogram.py  bot.py  cron.py  groups.py  helper.py  schedule.py  slash.py  templates.py  utils.py
src/sysbot_helper/cogs/: __init__.py  admin.py  announcement.py  api_server.py  autoreact.py  commands.py  dm.py  emoji.py  floating_help.py  help_doc.py  hex.py  ip.py  leetcode.py  level.py  luck.py  pa8.py  scheduled_messages.py  spam.py  stats.py  sysbot.py  sysinfo.py  telegram.py  time.py
src/sysbot_helper/cogs/checks/: __init__.py
src/sysbot_helper/cogs/models/: __init__.py  experience.py  telegram.py  user.py
src/sysbot_helper/cogs/utils/: __init__.py  discord_action.py  parser.py
src/sysbot_helper/cogs_extra/: adb.py  check_connection.py  cowsay.py  echo.py  helptest.py  matrix.py  minecraft.py  purge.py  send.py  status.py  typing.py
src/sysbot_helper/utils/: __init__.py  embeds.py  functions.py  ip.py  lazy.py
static/examples/: sample_embed.md
sysbot_helper/: __init__.py  __main__.py  bot.py  groups.py  helper.py  parser.py
templates/admin/: announce.md  change.md
templates/dm/: dm.md
tests/: conftest.py  test_bot_smoke.py  test_database.py  test_templates.py
tests/integration/: __init__.py  test_bot_smoke.py  test_database.py
tests/unit/: __init__.py  test_cog_time.py  test_cron.py  test_discord_text_parser.py  test_groups.py  test_scheduled_messages.py  test_templates.py
