[tool.poetry]
name = "sysbot-helper-bot"
version = "0.1.0"
description = ""
authors = ["Magma5 <mosciskistan@outlook.com>"]
packages = [
    { include = "sysbot_helper", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Jinja2 = "^3.1.2"
Pillow = "^9.3.0"
PyYAML = "^6.0"
mss = "^7.0.1"
more-itertools = "^9.1.0"
py-cord = "2.4.0"
pydantic = "^1.10.6"
aiogram = "3.0.0b7"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.5.post1"}
alembic = "^1.10.2"
asyncpg = "^0.27.0"
python-frontmatter = "^1.0.0"
iso8601 = "^1.1.0"
python-slugify = "^8.0.1"
markdownify = "^0.11.6"

[tool.poetry.scripts]
bot = "sysbot_helper:bot_main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
