[project]
name = "sysbot-helper-bot"
version = "0.1.0"
description = "Multi-functional Discord and Telegram bot"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "Jinja2>=3.1.4,<4.0.0",
    "Pillow>=11.0.0,<12.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "mss>=9.0.1,<10.0.0",
    "more-itertools>=10.2.0,<11.0.0",
    "py-cord>=2.6.1,<3.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "aiogram>=3.10.0,<4.0.0",
    "SQLAlchemy[asyncio]>=2.0.31,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "python-frontmatter>=1.1.0,<2.0.0",
    "iso8601>=2.1.0,<3.0.0",
    "python-slugify>=8.0.4,<9.0.0",
    "markdownify>=0.13.1,<0.14.0",
]

[project.scripts]
bot = "sysbot_helper:bot_main"

[dependency-groups]
dev = [
    "ruff>=0.4.8,<0.5.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sysbot_helper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
